[package]
name = "awesome-dictionary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
reqwest = {version = "0.11.18", features = ["json"]}
serde = {version = "1.0.163", features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = {version = "1.28.1", features = ["full"]}
warp = "0.3.5"
